Correciones con la voz todo esta corriendo correctamente